AmicarDP/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>N_10__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N-10</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_111__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N+11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_11__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N-11</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N__c</fullName>
        <formula>Oportunidad__r.N__c</formula>
        <label>N</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_mes_en_curso__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N mes en curso</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_mes_vencimiento_posterior__c</fullName>
        <defaultValue>false</defaultValue>
        <label>N mes vencimiento posterior</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_enviar_SMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No enviar SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cuentas</relationshipLabel>
        <relationshipName>Cuentas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Otro_correo_electronico__c</fullName>
        <label>Otro correo electrónico</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RUT__c</fullName>
        <externalId>true</externalId>
        <label>RUT</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Situaci_n_Laboral__c</fullName>
        <label>Situación Laboral</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telefono_fijo__c</fullName>
        <label>Telefono fijo</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ultimo_registro_de_actividad__c</fullName>
        <label>Último registro de actividad</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidaCuentaVenta__c</fullName>
        <formula>AND(
	IsPersonAccount,
	OR(
		ISBLANK(FirstName),
		ISBLANK(LastName),
		ISBLANK(PersonBirthdate),
		ISBLANK(PersonEmail),
		ISBLANK(PersonMobilePhone),
		ISBLANK(TEXT(Genero__pc)),
		ISBLANK(TEXT(Nacionalidad__pc)),
		ISBLANK(RUT__c)
	)
)</formula>
        <label>ValidaCuentaVenta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fecha_de_ultima_cuota__c</fullName>
        <formula>Oportunidad__r.Ultima_cuota__c</formula>
        <label>Fecha Última Cuota</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>MyAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Mis Clientes</label>
    </listViews>
    <listViews>
        <fullName>Todos_los_Clientes</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RUT__c</field>
            <operation>equals</operation>
            <value>18340369-9</value>
        </filters>
        <label>Todos los Clientes</label>
    </listViews>
    <recordTypes>
        <fullName>Cuenta_Empresa</fullName>
        <active>true</active>
        <label>Cuenta Empresa</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>